Implement add network
